--- a/branches.html
+++ b/branches.html
@@ -5,11 +5,20 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="index,follow">
+    <title>Vidhyashala Academy | Best Coaching for VIII,IX,X + XI-XII Science and Commerce + DEGREE ENGINEERING + CS
+        (Computer Scince)</title>
+    <meta name="description"
+        content="Vidhyashala Academy offers best coaching for VIII,IX,X + XI-XII Science and Commerce + DEGREE ENGINEERING + CS (Computer Scince) students. Our experienced faculty, personalized attention, and unique study materials ensure academic success. Contact us today!">
+
+
+    <link rel="canonical" href="https://www.vidhyashalaacademy.com/braches.html">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/responsive.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -17,8 +26,39 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
 
-    <title>Vidhyashala Academy</title>
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+        </script>
+<script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Vidhyashala Academy",
+      "url": "https://www.vidhyashalaacademy.com/",
+      "logo": "https://www.vidhyashalaacademy.com/assets/images/svgLogo.svg",
+      "description": "Best & Expert coaching for 8th-12th Science and Commerce students.",
+      "keywords": "Mulund, best classes, Mulund classes, Mulund west classes, Best coaching institute, 8th, VIII, 9th, IX, 10th, X, 11th, XI, 12th, XII, science, commerce, engineering, CBSE, ICSE, SSC, private tutoring, Top-rated tutors, Experienced faculty, Comprehensive study materials, Personalized learning, Effective teaching methods, Proven track record, Competitive exam preparation, Entrance exam coaching, Top-performing students, Affordable fees, Online classes availability, Flexible timings, Interactive learning environment, Mulund East, Mulund West, Computer Science, IT, BSc-IT, Engineering, JEE Main, CET, NEET, Private tuitions, one to one, private, physics, chem, chemistry, maths, mathematics, biology, tutor, coaching, institute, near me, thane",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "311/312, Shree Samarth Plaza, RRT Road, Mulund West",
+        "addressLocality": "Mumbai",
+        "addressRegion": "Maharashtra",
+        "postalCode": "400080",
+        "addressCountry": "IN"
+      },
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+91 9167322376",
+        "contactType": "customer service"
+      }
+    }
+</script>
+
 </head>
 
 <body>
