--- a/ssc.html
+++ b/ssc.html
@@ -31,30 +31,30 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <script type="application/ld+json">
-        {
-          "@context": "https://schema.org",
-          "@type": "Organization",
-          "name": "Vidhyashala Academy",
-          "url": "https://www.vidhyashalaacademy.com/",
-          "logo": "https://www.vidhyashalaacademy.com/assets/images/svgLogo.svg",
-          "description": "Expert coaching for 8th-12th Science and Commerce students.",
-          "keywords": "Mulund, best classes, Best coaching institute, 8th, VIII, 9th, IX, 10th, X, 11th, XI, 12th, XII, science, commerce, engineering, CBSE, ICSE, SSC, private tutoring, Top-rated tutors, Experienced faculty, Comprehensive study materials, Personalized learning, Effective teaching methods, Proven track record, Competitive exam preparation, Entrance exam coaching, Top-performing students, Affordable fees, Online classes availability, Flexible timings, Interactive learning environment, Mulund East, Mulund West, Computer Science, IT, BSc-IT, Engineering",
-          "address": {
-            "@type": "PostalAddress",
-            "streetAddress": "311/312, Shree Samarth Plaza, RRT Road, Mulund West",
-            "addressLocality": "Mumbai",
-            "addressRegion": "Maharashtra",
-            "postalCode": "400080",
-            "addressCountry": "IN"
-          },
-          "contactPoint": {
-            "@type": "ContactPoint",
-            "telephone": "+91 9167322376",
-            "contactType": "customer service"
-          }
-        }
-    </script>
+        <script type="application/ld+json">
+            {
+              "@context": "https://schema.org",
+              "@type": "Organization",
+              "name": "Vidhyashala Academy",
+              "url": "https://www.vidhyashalaacademy.com/",
+              "logo": "https://www.vidhyashalaacademy.com/assets/images/svgLogo.svg",
+              "description": "Best & Expert coaching for 8th-12th Science and Commerce students.",
+              "keywords": "Mulund, best classes, Mulund classes, Mulund west classes, Best coaching institute, 8th, VIII, 9th, IX, 10th, X, 11th, XI, 12th, XII, science, commerce, engineering, CBSE, ICSE, SSC, private tutoring, Top-rated tutors, Experienced faculty, Comprehensive study materials, Personalized learning, Effective teaching methods, Proven track record, Competitive exam preparation, Entrance exam coaching, Top-performing students, Affordable fees, Online classes availability, Flexible timings, Interactive learning environment, Mulund East, Mulund West, Computer Science, IT, BSc-IT, Engineering, JEE Main, CET, NEET, Private tuitions, one to one, private, physics, chem, chemistry, maths, mathematics, biology, tutor, coaching, institute, near me, thane",
+              "address": {
+                "@type": "PostalAddress",
+                "streetAddress": "311/312, Shree Samarth Plaza, RRT Road, Mulund West",
+                "addressLocality": "Mumbai",
+                "addressRegion": "Maharashtra",
+                "postalCode": "400080",
+                "addressCountry": "IN"
+              },
+              "contactPoint": {
+                "@type": "ContactPoint",
+                "telephone": "+91 9167322376",
+                "contactType": "customer service"
+              }
+            }
+        </script>
 </head>
 
 <body>
